--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,9 +18,9 @@ file(GLOB_RECURSE SimpleWallet SimpleWallet/*)
 if(MSVC)
 file(GLOB_RECURSE System System/* Platform/Windows/System/*)
 elseif(APPLE)
-file(GLOB_RECURSE System System/* Platform/OSX/System/*)
+file(GLOB_RECURSE System System/* Platform/OSX/System/* Platform/Posix/System/*)
 else()
-file(GLOB_RECURSE System System/* Platform/Linux/System/*)
+file(GLOB_RECURSE System System/* Platform/Linux/System/* Platform/Posix/System/*)
 endif()
 file(GLOB_RECURSE Transfers Transfers/*)
 file(GLOB_RECURSE Wallet Wallet/*)
@@ -61,8 +61,7 @@ if (MSVC)
   target_link_libraries(System ws2_32)
 endif ()
 
-set(ConnectivityToolLibs CryptoNoteCore Common Logging Crypto P2P Rpc Http Serialization System ${Boost_LIBRARIES})
-target_link_libraries(ConnectivityTool ${ConnectivityToolLibs} ${ConnectivityToolLibs})
+target_link_libraries(ConnectivityTool CryptoNoteCore Common Logging Crypto P2P Rpc Http Serialization System ${Boost_LIBRARIES})
 target_link_libraries(Daemon CryptoNoteCore P2P Rpc Serialization System Http Logging Common Crypto upnpc-static BlockchainExplorer ${Boost_LIBRARIES})
 target_link_libraries(SimpleWallet Wallet NodeRpcProxy Transfers Rpc Http Serialization CryptoNoteCore System Logging Common Crypto ${Boost_LIBRARIES})
 target_link_libraries(PaymentGateService PaymentGate JsonRpcServer Wallet NodeRpcProxy Transfers CryptoNoteCore Crypto P2P Rpc Http Serialization System Logging Common InProcessNode upnpc-static BlockchainExplorer ${Boost_LIBRARIES})
@@ -77,8 +76,7 @@ add_dependencies(PaymentGateService version)
 add_dependencies(P2P version)
 
 set_property(TARGET ConnectivityTool PROPERTY OUTPUT_NAME "connectivity_tool")
+set_property(TARGET Daemon PROPERTY OUTPUT_NAME "dragonglassd")
 set_property(TARGET SimpleWallet PROPERTY OUTPUT_NAME "simplewallet")
 set_property(TARGET PaymentGateService PROPERTY OUTPUT_NAME "walletd")
 set_property(TARGET Miner PROPERTY OUTPUT_NAME "miner")
-#TODO Specify the name of daemon for your currency
-set_property(TARGET Daemon PROPERTY OUTPUT_NAME "dragonglassd")
