--- a/src/fango.rc
+++ b/src/fango.rc
@@ -1,8 +1,8 @@
 #include <windows.h>
 
 1 VERSIONINFO
- FILEVERSION 1,7,0,0
- PRODUCTVERSION 1,7,0,0
+ FILEVERSION 1,7,2,0
+ PRODUCTVERSION 1,7,2,0
  FILEFLAGSMASK 0x3fL
  FILEFLAGS 0x0L
  FILEOS 0x40004L
@@ -14,13 +14,13 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "Fandom Gold Project"
-            VALUE "FileDescription", "Fandom Gold network daemon"
-            VALUE "FileVersion", "1.7.0.0"
+            VALUE "FileDescription", "Fandom Gold Network daemon"
+            VALUE "FileVersion", "1.7.2.0"
             VALUE "InternalName", "fandomgold.exe"
             VALUE "LegalCopyright", "Copyright (C) 2018-2019, The Fandom Gold Project"
             VALUE "OriginalFilename", "fandomgold.exe"
             VALUE "ProductName", "Fandom Gold"
-            VALUE "ProductVersion", "1.7.0.0"
+            VALUE "ProductVersion", "APOTHEOSIS II"
         END
     END
     BLOCK "VarFileInfo"
